# scoring

./: Griff OPFL Scoring 2025.xlsx  NewOPFLpoints.txt  OPFL Banner Room.docx  OPFL Draft & Future Traded Picks.xlsx  OPFL Scoring 2025 (5).xlsx  OPFL Scoring 2025.xlsx  README.md  autoscorer.py  pyproject.toml  scoring_validation.txt  validate_scores.py  vercel.json
.github/workflows/: score.yml
api/: lineup.py  transaction.py
data/: pending_trades.json  teams.json
opfl/: __init__.py  constants.py  data_fetcher.py  excel_parser.py  models.py  scorer.py  scoring.py
scripts/: export_for_web.py  migrate_to_json.py
web/: data.json  index.html
web/docs/: OPFL Schedule - 2025.doc  OPFL Scoring and Rules (2025).doc  Playoffs & W-L Records - 2024.xlsx
